# git_things

./: README.md  pyproject.toml
.github/workflows/: previous_test.yaml  sample.cpp  test.yaml
some_pkg/: __init__.py  another_func.py  some_func.py
